--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "mocha": "^5.2.0",
     "mochawesome": "^3.1.1",
     "optimist": "^0.6.1",
-    "svgo": "^1.3.2"
+    "svgo": "^1.3.2",
+    "paper": "0.12.3",
+    "paperjs-offset": "1.0.5"
   }
 }
